--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -1,6 +1,40 @@
-<div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-  <div class="example-box" *ngFor="let movie of movies" cdkDrag>
-    {{movie.title}}
-    <img *cdkDragPreview [src]="movie.poster" [alt]="movie.title">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="recipes-list-wrapper">
+        <cdk-tree [dataSource]="dataSource" [treeControl]="treeControl">
+          <!-- This is the tree node template for leaf nodes -->
+          <cdk-nested-tree-node *cdkTreeNodeDef="let node" class="example-tree-node">
+            <!-- use a disabled button to provide padding for tree leaf -->
+            <button mat-icon-button disabled></button>
+            <a (click)="selectRecipe(node)">{{node.title}}</a>
+          </cdk-nested-tree-node>
+          <!-- This is the tree node template for expandable nodes -->
+          <cdk-nested-tree-node *cdkTreeNodeDef="let node; when: hasChild" class="example-tree-node">
+            <button mat-icon-button [attr.aria-label]="'toggle ' + node.title" cdkTreeNodeToggle>
+              <mat-icon class="mat-icon-rtl-mirror">
+                {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+              </mat-icon>
+            </button>
+            <a>{{node.title}}</a>
+            <div class="float-right">
+              <mat-icon>
+                note_add
+              </mat-icon>
+              <mat-icon>
+                book
+              </mat-icon>
+            </div>
+            <div [class.example-tree-invisible]="!treeControl.isExpanded(node)">
+              <ng-container cdkTreeNodeOutlet></ng-container>
+            </div>
+          </cdk-nested-tree-node>
+        </cdk-tree>
+      </div>
+    </div>
+    <div class="col-lg-6">
+      <app-recipe  [recipe]="recipe"></app-recipe>
+    </div>
   </div>
+
 </div>
