--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -16,6 +16,7 @@
         </mat-icon>
       </button>
       {{node.title}}
+      <div class="float-right">trs</div>
       <div [class.example-tree-invisible]="!treeControl.isExpanded(node)">
         <ng-container cdkTreeNodeOutlet></ng-container>
       </div>
