--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -1,13 +1,16 @@
+
+
 <div class="container">
   <div class="row">
     <div class="col-lg-6">
+
       <div class="recipes-list-wrapper">
         <cdk-tree [dataSource]="dataSource" [treeControl]="treeControl">
           <!-- This is the tree node template for leaf nodes -->
           <cdk-nested-tree-node *cdkTreeNodeDef="let node" class="example-tree-node">
             <!-- use a disabled button to provide padding for tree leaf -->
             <button mat-icon-button disabled></button>
-            <a (click)="selectRecipe(node)">{{node.title}}</a>
+            <a href="#" (click)="selectRecipe(node)">{{node.title}}</a>
           </cdk-nested-tree-node>
           <!-- This is the tree node template for expandable nodes -->
           <cdk-nested-tree-node *cdkTreeNodeDef="let node; when: hasChild" class="example-tree-node">
@@ -18,12 +21,18 @@
             </button>
             <a>{{node.title}}</a>
             <div class="float-right">
-              <mat-icon>
-                note_add
-              </mat-icon>
-              <mat-icon>
-                book
-              </mat-icon>
+              <button mat-icon-button (click)="addRecipe(node.id)">
+                <mat-icon>
+                  note_add
+                </mat-icon>
+              </button>
+              <button (click)="openNewChapterModal(content, node.id)">
+                <mat-icon>
+                  book
+                </mat-icon>
+              </button>
+              <button (click)="showChapter(node.id)">test</button>
+
             </div>
             <div [class.example-tree-invisible]="!treeControl.isExpanded(node)">
               <ng-container cdkTreeNodeOutlet></ng-container>
@@ -33,8 +42,34 @@
       </div>
     </div>
     <div class="col-lg-6">
-      <app-recipe  [recipe]="recipe"></app-recipe>
+      <app-recipe [recipe]="recipe"></app-recipe>
     </div>
   </div>
 
 </div>
+
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="dateOfBirth">Date of birth</label>
+        <div class="input-group">
+          <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('s')">Save</button>
+  </div>
+</ng-template>
