--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -11,6 +11,7 @@
             <!-- use a disabled button to provide padding for tree leaf -->
             <button mat-icon-button disabled></button>
             <a href="#" (click)="selectRecipe(node)">{{node.title}}</a>
+            <button (click)="showChapter(node.id)">test</button>
           </cdk-nested-tree-node>
           <!-- This is the tree node template for expandable nodes -->
           <cdk-nested-tree-node *cdkTreeNodeDef="let node; when: hasChild" class="example-tree-node">
