change recipes to object instead of array

--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -27,7 +27,7 @@
                   note_add
                 </mat-icon>
               </button>
-              <button (click)="openNewChapterModal(content, node.id)">
+              <button (click)="openNewChapterModal(content, getNodeById(node.id))">
                 <mat-icon>
                   book
                 </mat-icon>
