implement tree view recursively

--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -5,15 +5,30 @@
     <div class="col-lg-6">
 
       <div class="recipes-list-wrapper">
-        <cdk-tree [dataSource]="dataSource" [treeControl]="treeControl">
-          <!-- This is the tree node template for leaf nodes -->
+
+        <ul>
+          <ng-container *ngTemplateOutlet="recursiveListTmpl; context:{ recipes: recipes.children }"></ng-container>
+        </ul>
+
+        <ng-template #recursiveListTmpl let-list="recipes">
+          <li *ngFor="let item of list">
+            {{ item.title }}
+            <ul *ngIf="item.children.length > 0">
+              <ng-container *ngTemplateOutlet="recursiveListTmpl; context:{ recipes: item.children }"></ng-container>
+            </ul>
+          </li>
+        </ng-template>
+
+
+        <!--<cdk-tree [dataSource]="dataSource" [treeControl]="treeControl">
+          &lt;!&ndash; This is the tree node template for leaf nodes &ndash;&gt;
           <cdk-nested-tree-node *cdkTreeNodeDef="let node" class="example-tree-node">
-            <!-- use a disabled button to provide padding for tree leaf -->
+            &lt;!&ndash; use a disabled button to provide padding for tree leaf &ndash;&gt;
             <button mat-icon-button disabled></button>
             <a href="#" (click)="selectRecipe(node)">{{node.title}}</a>
             <button (click)="showChapter(node.id)">test</button>
           </cdk-nested-tree-node>
-          <!-- This is the tree node template for expandable nodes -->
+          &lt;!&ndash; This is the tree node template for expandable nodes &ndash;&gt;
           <cdk-nested-tree-node *cdkTreeNodeDef="let node; when: hasChild" class="example-tree-node">
             <button mat-icon-button [attr.aria-label]="'toggle ' + node.title" cdkTreeNodeToggle>
               <mat-icon class="mat-icon-rtl-mirror">
@@ -22,7 +37,7 @@
             </button>
             <a>{{node.title}}</a>
             <div class="float-right">
-              <button mat-icon-button (click)="addRecipe(node.id)">
+              <button mat-icon-button (click)="addRecipe(getNodeById(node.id))">
                 <mat-icon>
                   note_add
                 </mat-icon>
@@ -39,7 +54,7 @@
               <ng-container cdkTreeNodeOutlet></ng-container>
             </div>
           </cdk-nested-tree-node>
-        </cdk-tree>
+        </cdk-tree>-->
       </div>
     </div>
     <div class="col-lg-6">
