--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="recipe">
   <input class="form-control" type="text" placeholder="Default input" [(ngModel)]="recipe.title" style="margin-bottom: 10px">
 
+  <img src="{{recipe.image}}" alt="..." class="img-thumbnail">
+
   <quill-editor [modules]="modules" [(ngModel)]="recipe.text"></quill-editor>
 </div>
 
