--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -25,7 +25,7 @@
             <ng-template #isChapter>
               {{node.title}}
               <div class="float-right">
-                <button mat-icon-button (click)="addRecipe(getNodeById(node.id))">
+                <button mat-icon-button (click)="openNewRecipeModal(newRecipeModal, getNodeById(node.id))">
                   <mat-icon>
                     note_add
                   </mat-icon>
@@ -113,6 +113,28 @@
         <label for="newChapterTitle">Neues Kapitel</label>
         <div class="input-group">
           <input class="form-control" id="newChapterTitle" type="text" placeholder="Titel des neuen Kapitels" name="newChapterName" [(ngModel)]="newChapterTitle" style="margin-bottom: 10px">
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('s')">Save</button>
+  </div>
+</ng-template>
+
+<ng-template #newRecipeModal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="nr-title">Neues Rezept unter "{{chapter.title}}" hinzufügen</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="newChapterTitle">Neues Rezept</label>
+        <div class="input-group">
+          <input class="form-control" id="newRecipeUrl" type="text" placeholder="https://www.example.com" name="newRecipeUrl" [(ngModel)]="newRecipeUrl" style="margin-bottom: 10px">
         </div>
       </div>
     </form>
