--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>test</h1>
-<app-recipes-list>
+<!--<app-recipes-list>
 
-</app-recipes-list>
+</app-recipes-list>-->
+
+<router-outlet></router-outlet>
