add skeleton recipe

--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,7 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-10">
-      <input class="form-control" type="text" placeholder="Default input" [(ngModel)]="recipe.title" style="margin-bottom: 10px">
+
+  <mat-form-field class="example-full-width">
+    <input type="text" placeholder="Default input" matInput [(ngModel)]="recipe.title" style="margin-bottom: 10px">
+    <mat-icon matSuffix>mode_edit</mat-icon>
+  </mat-form-field>
+
+
+
 
       <img src="{{recipe.image}}" alt="..." class="img-thumbnail">
       <quill-editor [modules]="modules" [(ngModel)]="recipe.text"></quill-editor>
