--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,30 +1,25 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-10">
+    <div class="col-lg-9">
 
   <mat-form-field class="example-full-width">
-    <input type="text" placeholder="Default input" matInput [(ngModel)]="recipe.title" style="margin-bottom: 10px">
+    <input type="text" placeholder="Titel" matInput [(ngModel)]="recipe.title" style="margin-bottom: 10px">
     <mat-icon matSuffix>mode_edit</mat-icon>
   </mat-form-field>
 
 
 
+      <app-image-list [recipe]="recipe"></app-image-list>
 
-      <img src="{{recipe.image}}" alt="..." class="img-thumbnail">
       <quill-editor [modules]="modules" [(ngModel)]="recipe.text"></quill-editor>
     </div>
-    <div class="col-lg-2">
+    <div class="col-lg-3">
       <app-ingredients [recipe]="recipe"></app-ingredients>
     </div>
   </div>
 </div>
 
 <div *ngIf="recipe">
-
-
-
-
-
 
 </div>
 
