--- a/src/app/image-list/image-list.component.html
+++ b/src/app/image-list/image-list.component.html
@@ -1,24 +1,56 @@
-
 <div style="height: 250px; margin-bottom: 20px">
   <div class="container">
+
+
     <div class="row">
       <div class="col-5">
-        <img src="{{recipe.image}}" alt="..." class="img-thumbnail" style="height:220px; width: 100%; object-fit: cover">
+        <img src="{{recipe.image}}" alt="..." class="img-thumbnail"
+             style="height:220px; width: 100%; object-fit: cover">
       </div>
       <div class="col-7">
         <div class="container">
 
 
-              <div class="row">
-              <div class="col-3" style="padding: 5px;" *ngFor="let i of [0,1,2,3,4,5,6,7]">
-                <img (click)="recipe.image = recipe.images[i]" src="{{recipe.images[i]}}" style="height: 100px;">
-              </div>
+          <div class="row">
+            <div class="col-3" style="padding: 5px;" *ngFor="let i of [0,1,2,3,4,5,6,7]">
+              <img (click)="recipe.image = recipe.images[i]" src="{{recipe.images[i]}}" style="height: 100px;">
+            </div>
 
           </div>
         </div>
       </div>
+
     </div>
+
+    <div class="row">
+      <div class="col-5"></div>
+
+      <div class="col-2">
+        <button mat-icon-button>
+          <mat-icon>
+            chevron_left
+          </mat-icon>
+        </button>
+
+      </div>
+      <div class="col-3">
+        <button mat-button style="margin-left: auto; margin-right: auto; display: block;">Eigenes Bild...</button>
+      </div>
+      <div class="col-2">
+        <button mat-icon-button class="float-right">
+          <mat-icon>
+            chevron_right
+          </mat-icon>
+        </button>
+
+      </div>
+
+
+    </div>
+
+
   </div>
-
-
 </div>
+
+
+
