--- a/src/app/ingredients/ingredients.component.css
+++ b/src/app/ingredients/ingredients.component.css
@@ -11,7 +11,7 @@
 }
 
 .example-box {
-  padding: 20px 10px;
+  padding: 12px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
@@ -49,4 +49,7 @@
 }
 
 
+.example-full-width {
+  width: 100%;
+}
 
