--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-9">
 
   <mat-form-field class="example-full-width">
-    <input type="text" placeholder="Titel" matInput [(ngModel)]="recipe.title" style="margin-bottom: 10px">
+    <input type="text" placeholder="Titel" matInput [(ngModel)]="recipe.title" style="font-size: 20pt; margin-bottom: 10px">
     <mat-icon matSuffix>mode_edit</mat-icon>
   </mat-form-field>
 
