--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,4 +1,18 @@
+
+
+
+
 <div class="container">
+
+  <div class="row">
+    <div class="col-lg-12" style="padding: 10px 15px; height: 50px;">
+
+        <a routerLink="/"><button class="btn btn-success float-right" >Zurück</button></a>
+
+
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-lg-9">
 
@@ -6,8 +20,6 @@
     <input type="text" placeholder="Titel" matInput [(ngModel)]="recipe.title" style="font-size: 20pt; margin-bottom: 10px">
     <mat-icon matSuffix>mode_edit</mat-icon>
   </mat-form-field>
-
-
 
       <app-image-list [recipe]="recipe"></app-image-list>
 
