implement chapter detail

--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -21,7 +21,7 @@
     <mat-icon matSuffix>mode_edit</mat-icon>
   </mat-form-field>
 
-      <app-image-list [recipe]="recipe"></app-image-list>
+      <app-image-list [node]="recipe"></app-image-list>
 
       <quill-editor [modules]="modules" [(ngModel)]="recipe.text"></quill-editor>
     </div>
