--- a/src/app/image-list/image-list.component.html
+++ b/src/app/image-list/image-list.component.html
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-5">
-        <img src="{{recipe.image}}" alt="..." class="img-thumbnail"
+        <img src="{{node.image}}" alt="..." class="img-thumbnail"
              style="height:220px; width: 100%; object-fit: cover">
       </div>
       <div class="col-7">
@@ -14,7 +14,7 @@
 
           <div class="row">
             <div class="col-3" style="padding: 5px;" *ngFor="let img of displayedImages">
-              <img (click)="recipe.image = img; imageUrl.value='';" src="{{img}}" style="height: 100px; width: 100px; object-fit: cover;">
+              <img (click)="node.image = img; imageUrl.value='';" src="{{img}}" style="height: 100px; width: 100px; object-fit: cover;">
             </div>
 
           </div>
@@ -38,7 +38,7 @@
 
       </div>
       <div class="col-3">
-        <input class="form-control form-control-sm" type="text" #imageUrl placeholder="Eigenes Bild..." (input)="recipe.image = imageUrl.value; recipe.images.push(imageUrl.value)">
+        <input class="form-control form-control-sm" type="text" #imageUrl placeholder="Eigenes Bild..." (input)="node.image = imageUrl.value; node.images.push(imageUrl.value)">
       </div>
 
 
