--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -5,6 +5,8 @@
     <div class="col-lg-12" style="padding: 10px 15px; height: 50px;">
 
       <button class="btn btn-success float-right" (click)="recipesService.save()">Speichern</button>
+      <button class="btn btn-success float-right" (click)="recipesService.delete()">Löschen</button>
+      <button class="btn btn-success float-right" (click)="render()">Rendern</button>
 
 
     </div>
@@ -70,6 +72,14 @@
       <app-recipe-preview *ngIf="recipe" [recipe]="recipe"></app-recipe-preview>
     </div>
   </div>
+  <div class="row">
+    <div class="col-12">
+      <mat-form-field class="example-full-width">
+        <mat-label>Leave a comment</mat-label>
+        <textarea matInput [(ngModel)]="renderOutput" placeholder="Ex. It makes me feel..."></textarea>
+      </mat-form-field>
+    </div>
+  </div>
 
 </div>
 
@@ -117,3 +127,5 @@
     <button type="button" class="btn btn-outline-dark" (click)="modal.close('s')">Save</button>
   </div>
 </ng-template>
+
+
