--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -6,7 +6,8 @@
 
       <button class="btn btn-success float-right" (click)="recipesService.save()">Speichern</button>
       <button class="btn btn-success float-right" (click)="recipesService.delete()">Löschen</button>
-      <button class="btn btn-success float-right" (click)="render()">Rendern</button>
+      <button class="btn btn-success float-right" (click)="renderHere()">Rendern</button>
+      <button class="btn btn-success float-right" (click)="render()">Rendern2Tex</button>
 
 
     </div>
