--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -8,6 +8,7 @@
       <button class="btn btn-success float-right" (click)="recipesService.delete()">Löschen</button>
       <button class="btn btn-success float-right" (click)="renderHere()">Rendern</button>
       <button class="btn btn-success float-right" (click)="render()">Rendern2Tex</button>
+      <button class="btn btn-success float-right" (click)="compilationService.sendMessage('testssss')">Rendern2Tex</button>
 
 
     </div>
