--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,13 +1,11 @@
-
-
-
-
 <div class="container">
 
   <div class="row">
     <div class="col-lg-12" style="padding: 10px 15px; height: 50px;">
 
-        <a routerLink="/"><button class="btn btn-success float-right" >Zurück</button></a>
+      <a routerLink="/">
+        <button class="btn btn-success float-right">Zurück</button>
+      </a>
 
 
     </div>
@@ -16,14 +14,16 @@
   <div class="row">
     <div class="col-lg-9">
 
-  <mat-form-field class="example-full-width">
-    <input type="text" placeholder="Titel" matInput [(ngModel)]="recipe.title" style="font-size: 20pt; margin-bottom: 10px">
-    <mat-icon matSuffix>mode_edit</mat-icon>
-  </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input type="text" placeholder="Titel" matInput [(ngModel)]="recipe.title"
+               style="font-size: 20pt; margin-bottom: 10px">
+        <mat-icon matSuffix>mode_edit</mat-icon>
+      </mat-form-field>
 
       <app-image-list [node]="recipe"></app-image-list>
-
-      <quill-editor [modules]="modules" [(ngModel)]="recipe.text"></quill-editor>
+      <div style="height: 500px">
+        <quill-editor [modules]="modules" [(ngModel)]="recipe.text"></quill-editor>
+      </div>
     </div>
     <div class="col-lg-3">
       <app-ingredients [recipe]="recipe"></app-ingredients>
