--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,10 @@
 @import '~@material/image-list/dist/mdc.image-list.min.css';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+#navbar {
+  background-color: #eee;
+  width: 100%;
+  padding: 10px;
+}
+
