--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -25,16 +25,10 @@
     </div>
   </div>
 
+
   <div class="row">
+    <div class="col-8">
 
-    <div class="col-lg-12" style="padding: 10px 15px; height: 50px;">
-
-
-    </div>
-  </div>
-  <div class="row">
-    
-    <div class="col-lg-8">
 
       <div class="recipes-list-wrapper">
         <div class="tree">
@@ -104,23 +98,16 @@
 
             </li>
           </ng-template>
-
         </div>
       </div>
     </div>
-    <div class="col-lg-4">
-      <app-recipe-preview *ngIf="recipe" [recipe]="recipe"></app-recipe-preview>
+    <div class="col-4">
+      <div class="sticky-top">
+        <app-recipe-preview *ngIf="recipe" [recipe]="recipe"></app-recipe-preview>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-12">
-      <mat-form-field class="example-full-width">
-        <mat-label>Leave a comment</mat-label>
-        <textarea matInput [(ngModel)]="renderOutput" placeholder="Ex. It makes me feel..."></textarea>
-      </mat-form-field>
-    </div>
-  </div>
 
+  </div>
 </div>
 
 
