--- a/src/styles.css
+++ b/src/styles.css
@@ -8,5 +8,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-color: #eee;
   width: 100%;
   padding: 10px;
+  margin-bottom: 10px;
 }
 
