--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,15 +1,19 @@
 <div class="container">
 
   <div class="row">
-    <div class="col-lg-12" style="padding: 10px 15px; height: 50px;">
+    <div class="col-12">
+      <div id="navbar">
 
-      <a routerLink="/">
-        <button class="btn btn-success float-right">Zurück</button>
-      </a>
+        <a routerLink="/"><button mat-raised-button color="primary">zurück</button></a>
+
+        <button mat-flat-button color="warn" class="float-right" (click)="openDeleteDialog(recipe)">Rezept löschen</button>
+      </div>
 
 
     </div>
   </div>
+
+
 
   <div class="row">
     <div class="col-lg-9">
