add more than one recipe implemented

--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -149,8 +149,8 @@
       <div class="form-group">
         <label for="newChapterTitle">Neues Rezept</label>
         <div class="input-group">
-          <input class="form-control" id="newRecipeUrl" type="text" placeholder="https://www.example.com"
-                 name="newRecipeUrl" [(ngModel)]="newRecipeUrl" style="margin-bottom: 10px">
+          <textarea class="form-control" id="newRecipeUrl" type="text" placeholder="https://www.example.com"
+                    name="newRecipeUrl" [(ngModel)]="newRecipeUrl" style="margin-bottom: 10px"></textarea>
         </div>
       </div>
     </form>
