--- a/src/app/recipe-preview/recipe-preview.component.html
+++ b/src/app/recipe-preview/recipe-preview.component.html
@@ -1,9 +1,9 @@
 <h5>{{recipe.title}}</h5>
 <img class="img-thumbnail" src="{{recipe.image}}">
-<div>
+<div style="margin-top: 10px">
   <table width="100%">
     <ng-container *ngFor="let ingredient of recipe.ingredients">
-      <tr>
+      <tr style="border-bottom: 1px solid lightgray">
         <td style="width: 50%; text-align: right; padding-right: 20px">{{ingredient[0]}}</td>
         <td>{{ingredient[1]}}</td>
       </tr>
