--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -6,7 +6,7 @@
 
         <a routerLink="/"><button mat-raised-button color="primary">zurück</button></a>
 
-        <button mat-flat-button color="warn" class="float-right" (click)="openDeleteDialog(recipe)">Rezept löschen</button>
+        <button mat-raised-button color="warn" class="float-right" (click)="openDeleteDialog(recipe)">Rezept löschen</button>
       </div>
 
 
