--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -70,7 +70,7 @@
 
 
                 <ng-container *ngIf="isBottomChapter(node) || node.children.length === 0">
-                    <button mat-icon-button (click)="openNewRecipeModal(newRecipeModal, node.id)">
+                    <button mat-icon-button (click)="openAddRecipeDialog(node.id)">
                       <mat-icon>
                         note_add
                       </mat-icon>
