--- a/src/app/dialog-add-chapter/dialog-add-chapter.component.html
+++ b/src/app/dialog-add-chapter/dialog-add-chapter.component.html
@@ -1,11 +1,12 @@
-<h2 mat-dialog-title>Wirklich löschen?</h2>
-<mat-dialog-content class="mat-typography">
-
-  <p>Möchtest du "{{data.title}}" wirklich löschen?</p>
-
-
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Abbrechen</button>
-  <button mat-flat-button color="warn" [mat-dialog-close]="true" cdkFocusInitial>Löschen</button>
-</mat-dialog-actions>
+<h1 mat-dialog-title>Neues Kapitel unter {{data.title}} hinzufügen</h1>
+<div mat-dialog-content>
+  <p>What's your favorite animal?</p>
+  <mat-form-field style="width: 100%;">
+    <mat-label>Favorite Animal</mat-label>
+    <input matInput  [(ngModel)]="chapterTitle">
+  </mat-form-field>
+</div>
+<div mat-dialog-actions>
+  <button mat-button (click)="onNoClick()">Abbrechen</button>
+  <button mat-button [mat-dialog-close]="chapterTitle" cdkFocusInitial>Hinzufügen</button>
+</div>
