--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -5,9 +5,10 @@
       <div id="navbar">
         <button mat-raised-button [matMenuTriggerFor]="menu">Menu</button>
         <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="recipesService.save()">
-            <mat-icon>save</mat-icon>
-            Speichern
+
+          <button mat-menu-item (click)="recipesService.downloadBook()">
+            <mat-icon>get_app</mat-icon>
+            Herunterladen
           </button>
           <button mat-menu-item (click)="recipesService.delete()">
             <mat-icon>delete</mat-icon>
@@ -34,7 +35,7 @@
         <div class="tree">
           <ul style="border: none">
             <li>Mein Kochbuch
-              <button class="float-right" mat-icon-button (click)="openNewChapterModal(newChapterModal, '000')">
+              <button class="float-right"  matTooltip="Ein neues Unterkapitel erstellen" mat-icon-button (click)="openAddChapterDialog('000')">
                 <mat-icon>
                   book
                 </mat-icon>
@@ -70,7 +71,7 @@
 
 
                 <ng-container *ngIf="isBottomChapter(node) || node.children.length === 0">
-                    <button mat-icon-button (click)="openAddRecipeDialog(node.id)">
+                    <button mat-icon-button matTooltip="Ein neues Rezept hinzufügen" (click)="openAddRecipeDialog(node.id)">
                       <mat-icon>
                         note_add
                       </mat-icon>
@@ -78,7 +79,7 @@
                   </ng-container>
 
                   <ng-container *ngIf="!isBottomChapter(node)">
-                    <button mat-icon-button (click)="openAddChapterDialog(node.id)">
+                    <button mat-icon-button matTooltip="Ein neues Unterkapitel erstellen" (click)="openAddChapterDialog(node.id)">
                       <mat-icon>
                         book
                       </mat-icon>
