--- a/src/app/dialog-add-chapter/dialog-add-chapter.component.html
+++ b/src/app/dialog-add-chapter/dialog-add-chapter.component.html
@@ -1,12 +1,12 @@
 <h1 mat-dialog-title>Neues Kapitel unter {{data.title}} hinzufügen</h1>
 <div mat-dialog-content>
-  <p>What's your favorite animal?</p>
+
   <mat-form-field style="width: 100%;">
-    <mat-label>Favorite Animal</mat-label>
+    <mat-label>Titel</mat-label>
     <input matInput  [(ngModel)]="chapterTitle">
   </mat-form-field>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions align="end">
   <button mat-button (click)="onNoClick()">Abbrechen</button>
   <button mat-button [mat-dialog-close]="chapterTitle" cdkFocusInitial>Hinzufügen</button>
 </div>
