--- a/src/app/dialog-add-recipe/dialog-add-recipe.component.html
+++ b/src/app/dialog-add-recipe/dialog-add-recipe.component.html
@@ -1,12 +1,11 @@
 <h1 mat-dialog-title>Rezept zum Kapitel {{data.title}} hinzufügen</h1>
 <div mat-dialog-content>
-  <p>What's your favorite animal?</p>
   <mat-form-field style="width: 100%;">
-    <mat-label>Favorite Animal</mat-label>
+    <mat-label>Ein Link oder eine Rezeptnummer pro Zeile</mat-label>
     <textarea matInput  [(ngModel)]="recipesUrls"></textarea>
   </mat-form-field>
 </div>
-<div mat-dialog-actions>
+<div mat-dialog-actions align="end">
   <button mat-button (click)="onNoClick()">Abbrechen</button>
   <button mat-button [mat-dialog-close]="recipesUrls" cdkFocusInitial>Hinzufügen</button>
 </div>
